--- a/google-samples/java/javaDesktop/test-output/index.html
+++ b/google-samples/java/javaDesktop/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Google_Test_Suite">
-                    <span>D:\Programming\Automation\google-samples\java\javaDesktop\testng.xml</span>
+                    <span>D:\Programming\Automation\ThanhDinh\google-samples\java\javaDesktop\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -106,7 +106,7 @@
                       <br/>
                       <span>
                         <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Google_Test_Suite" title="google.GoogleTestsDesktop" hash-for-method="GoogleLogin_Valid">GoogleLogin_Valid</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Google_Test_Suite" title="google.GoogleTestsDesktop" hash-for-method="GoogleLogin_Invalid">GoogleLogin_Invalid</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Google_Test_Suite -->
@@ -120,7 +120,7 @@
                     <div class="method-list-content passed suite-Google_Test_Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Google_Test_Suite" title="google.GoogleTestsDesktop" hash-for-method="GoogleLogin_Invalid">GoogleLogin_Invalid</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Google_Test_Suite" title="google.GoogleTestsDesktop" hash-for-method="GoogleLogin_Valid">GoogleLogin_Valid</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Google_Test_Suite -->
@@ -146,26 +146,24 @@
                   <a name="GoogleComposeEmail">
                   </a> <!-- GoogleComposeEmail -->
                   <span class="method-name">GoogleComposeEmail</span>
-                  <div class="stack-trace"><b>"no such element: Unable to locate element: {"method":"xpath","selector":"//div[text()='COMPOSE']"}
-  (Session info: chrome=47.0.2526.106)
-  (Driver info: chromedriver=2.20.353145 (343b531d31eeb933ec778dbcf7081628a1396067),platform=Windows NT 6.1 SP1 x86_64) (WARNING: The server did not provide any stacktrace information)
-Command duration or timeout: 45 milliseconds
+                  <div class="stack-trace"><b>"Unable to locate element: {"method":"xpath","selector":"//div[text()='COMPOSE']"}
+Command duration or timeout: 17 milliseconds
 For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
 Build info: version: '2.48.2', revision: '41bccdd10cf2c0560f637404c2d96164b67d9d67', time: '2015-10-09 13:08:06'
-System info: host: 'JosephThanh-PC', ip: '192.168.10.67', os.name: 'Windows 7', os.arch: 'amd64', os.version: '6.1', java.version: '1.8.0_66'
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, chrome={userDataDir=C:\Users\JOSEPH~1\AppData\Local\Temp\scoped_dir5168_22602}, takesHeapSnapshot=true, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=47.0.2526.106, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=true, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true}]
-Session ID: 90f176989c53395024a14cdf4cdc6f8a
-*** Element info: {Using=xpath, value=//div[text()='COMPOSE']}"</b><br>sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)<br>sun.reflect.NativeConstructorAccessorImpl.newInstance(Unknown Source)<br>sun.reflect.DelegatingConstructorAccessorImpl.newInstance(Unknown Source)<br>java.lang.reflect.Constructor.newInstance(Unknown Source)<br>org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:206)<br>org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:158)<br>org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:647)<br>org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:353)<br>org.openqa.selenium.remote.RemoteWebDriver.findElementByXPath(RemoteWebDriver.java:490)<br>google.GoogleTestsDesktop.GoogleComposeEmail(GoogleTestsDesktop.java:83)<br>sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br>sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)<br>sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)<br>java.lang.reflect.Method.invoke(Unknown Source)<br>org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)<br>org.testng.internal.Invoker.invokeMethod(Invoker.java:702)<br>org.testng.internal.Invoker.invokeTestMethod(Invoker.java:894)<br>org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1219)<br>org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)<br>org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)<br>org.testng.TestRunner.privateRun(TestRunner.java:768)<br>org.testng.TestRunner.run(TestRunner.java:617)<br>org.testng.SuiteRunner.runTest(SuiteRunner.java:334)<br>org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)<br>org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)<br>org.testng.SuiteRunner.run(SuiteRunner.java:240)<br>org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)<br>org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:87)<br>org.testng.TestNG.runSuitesSequentially(TestNG.java:1188)<br>org.testng.TestNG.runSuitesLocally(TestNG.java:1113)<br>org.testng.TestNG.run(TestNG.java:1025)<br>org.testng.remote.RemoteTestNG.run(RemoteTestNG.java:115)<br>org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:207)<br>org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:178)<br>
+System info: host: 'JosephThanh-PC', ip: '192.168.0.101', os.name: 'Windows 7', os.arch: 'amd64', os.version: '6.1', java.version: '1.8.0_66'
+Driver info: org.openqa.selenium.firefox.FirefoxDriver
+Capabilities [{applicationCacheEnabled=true, rotatable=false, handlesAlerts=true, databaseEnabled=true, version=43.0.1, platform=WINDOWS, nativeEvents=false, acceptSslCerts=true, webStorageEnabled=true, locationContextEnabled=true, browserName=firefox, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true}]
+Session ID: c7101acb-c3c9-4b80-a1e1-a692b34c47fd
+*** Element info: {Using=xpath, value=//div[text()='COMPOSE']}"</b><br>sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)<br>sun.reflect.NativeConstructorAccessorImpl.newInstance(Unknown Source)<br>sun.reflect.DelegatingConstructorAccessorImpl.newInstance(Unknown Source)<br>java.lang.reflect.Constructor.newInstance(Unknown Source)<br>org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:206)<br>org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:158)<br>org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:647)<br>org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:353)<br>org.openqa.selenium.remote.RemoteWebDriver.findElementByXPath(RemoteWebDriver.java:490)<br>google.GoogleTestsDesktop.GoogleComposeEmail(GoogleTestsDesktop.java:95)<br>sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br>sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)<br>sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)<br>java.lang.reflect.Method.invoke(Unknown Source)<br>org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)<br>org.testng.internal.Invoker.invokeMethod(Invoker.java:702)<br>org.testng.internal.Invoker.invokeTestMethod(Invoker.java:894)<br>org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1219)<br>org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)<br>org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)<br>org.testng.TestRunner.privateRun(TestRunner.java:768)<br>org.testng.TestRunner.run(TestRunner.java:617)<br>org.testng.SuiteRunner.runTest(SuiteRunner.java:334)<br>org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)<br>org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)<br>org.testng.SuiteRunner.run(SuiteRunner.java:240)<br>org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)<br>org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:87)<br>org.testng.TestNG.runSuitesSequentially(TestNG.java:1188)<br>org.testng.TestNG.runSuitesLocally(TestNG.java:1113)<br>org.testng.TestNG.run(TestNG.java:1025)<br>org.testng.remote.RemoteTestNG.run(RemoteTestNG.java:115)<br>org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:207)<br>org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:178)<br>
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="GoogleLogin_Valid">
-                  </a> <!-- GoogleLogin_Valid -->
-                  <span class="method-name">GoogleLogin_Valid</span>
-                  <div class="stack-trace"><b>"expected:<false> but was:<true>"</b><br>org.testng.Assert.fail(Assert.java:89)<br>org.testng.Assert.failNotEquals(Assert.java:489)<br>org.testng.Assert.assertEquals(Assert.java:118)<br>org.testng.Assert.assertEquals(Assert.java:281)<br>org.testng.Assert.assertEquals(Assert.java:291)<br>google.GoogleTestsDesktop.GoogleLogin_Valid(GoogleTestsDesktop.java:77)<br>sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br>sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)<br>sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)<br>java.lang.reflect.Method.invoke(Unknown Source)<br>org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)<br>org.testng.internal.Invoker.invokeMethod(Invoker.java:702)<br>org.testng.internal.Invoker.invokeTestMethod(Invoker.java:894)<br>org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1219)<br>org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)<br>org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)<br>org.testng.TestRunner.privateRun(TestRunner.java:768)<br>org.testng.TestRunner.run(TestRunner.java:617)<br>org.testng.SuiteRunner.runTest(SuiteRunner.java:334)<br>org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)<br>org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)<br>org.testng.SuiteRunner.run(SuiteRunner.java:240)<br>org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)<br>org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:87)<br>org.testng.TestNG.runSuitesSequentially(TestNG.java:1188)<br>org.testng.TestNG.runSuitesLocally(TestNG.java:1113)<br>org.testng.TestNG.run(TestNG.java:1025)<br>org.testng.remote.RemoteTestNG.run(RemoteTestNG.java:115)<br>org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:207)<br>org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:178)<br>
+                  <a name="GoogleLogin_Invalid">
+                  </a> <!-- GoogleLogin_Invalid -->
+                  <span class="method-name">GoogleLogin_Invalid</span>
+                  <div class="stack-trace"><b>"expected:<Please enter your email.> but was:<Vui l?ng nh?p email c?a b?n.>"</b><br>org.testng.Assert.fail(Assert.java:89)<br>org.testng.Assert.failNotEquals(Assert.java:489)<br>org.testng.Assert.assertEquals(Assert.java:118)<br>org.testng.Assert.assertEquals(Assert.java:171)<br>org.testng.Assert.assertEquals(Assert.java:181)<br>google.GoogleTestsDesktop.GoogleLogin_Invalid(GoogleTestsDesktop.java:75)<br>sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br>sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)<br>sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)<br>java.lang.reflect.Method.invoke(Unknown Source)<br>org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)<br>org.testng.internal.Invoker.invokeMethod(Invoker.java:702)<br>org.testng.internal.Invoker.invokeTestMethod(Invoker.java:894)<br>org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1219)<br>org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)<br>org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)<br>org.testng.TestRunner.privateRun(TestRunner.java:768)<br>org.testng.TestRunner.run(TestRunner.java:617)<br>org.testng.SuiteRunner.runTest(SuiteRunner.java:334)<br>org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)<br>org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)<br>org.testng.SuiteRunner.run(SuiteRunner.java:240)<br>org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)<br>org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:87)<br>org.testng.TestNG.runSuitesSequentially(TestNG.java:1188)<br>org.testng.TestNG.runSuitesLocally(TestNG.java:1113)<br>org.testng.TestNG.run(TestNG.java:1025)<br>org.testng.remote.RemoteTestNG.run(RemoteTestNG.java:115)<br>org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:207)<br>org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:178)<br>
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
@@ -179,9 +177,9 @@ Session ID: 90f176989c53395024a14cdf4cdc6f8a
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="GoogleLogin_Invalid">
-                  </a> <!-- GoogleLogin_Invalid -->
-                  <span class="method-name">GoogleLogin_Invalid</span>
+                  <a name="GoogleLogin_Valid">
+                  </a> <!-- GoogleLogin_Valid -->
+                  <span class="method-name">GoogleLogin_Valid</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -189,7 +187,7 @@ Session ID: 90f176989c53395024a14cdf4cdc6f8a
         </div> <!-- panel Google_Test_Suite -->
         <div panel-name="test-xml-Google_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\Programming\Automation\google-samples\java\javaDesktop\testng.xml</span>
+            <span class="header-content">D:\Programming\Automation\ThanhDinh\google-samples\java\javaDesktop\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -197,11 +195,11 @@ Session ID: 90f176989c53395024a14cdf4cdc6f8a
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Google Test Suite&quot; parallel=&quot;none&quot;&gt;
   &lt;test name=&quot;Google Tests&quot; preserve-order=&quot;true&quot;&gt;
-    &lt;parameter name=&quot;passwordEmailTo&quot; value=&quot;Admin@123456789&quot;/&gt;
-    &lt;parameter name=&quot;emailSend&quot; value=&quot;krypton.portal@gmail.com&quot;/&gt;
-    &lt;parameter name=&quot;browserName&quot; value=&quot;Chrome&quot;/&gt;
-    &lt;parameter name=&quot;passwordEmailSend&quot; value=&quot;Admin@123456789&quot;/&gt;
-    &lt;parameter name=&quot;emailTo&quot; value=&quot;krypton.portal2@gmail.com&quot;/&gt;
+    &lt;parameter name=&quot;passwordEmailTo&quot; value=&quot;DucThanh1991&quot;/&gt;
+    &lt;parameter name=&quot;emailSend&quot; value=&quot;dinhducthanh91@gmail.com&quot;/&gt;
+    &lt;parameter name=&quot;browserName&quot; value=&quot;firefox&quot;/&gt;
+    &lt;parameter name=&quot;passwordEmailSend&quot; value=&quot;ngoctrinh&quot;/&gt;
+    &lt;parameter name=&quot;emailTo&quot; value=&quot;jslucifer.photography@gmai.com&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;google.GoogleTestsDesktop&quot;/&gt;
     &lt;/classes&gt;
@@ -247,20 +245,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'GoogleLogin_Valid')
 data.setCell(0, 2, 'google.GoogleTestsDesktop')
-data.setCell(0, 3, 23527);
+data.setCell(0, 3, 28207);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'GoogleLogin_Invalid')
 data.setCell(1, 2, 'google.GoogleTestsDesktop')
-data.setCell(1, 3, 13767);
+data.setCell(1, 3, 7685);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'GoogleComposeEmail')
 data.setCell(2, 2, 'google.GoogleTestsDesktop')
-data.setCell(2, 3, 47);
+data.setCell(2, 3, 21);
 window.suiteTableData['Google_Test_Suite']= { tableData: data, tableDiv: 'times-div-Google_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 37 seconds</span>
+              <span class="suite-total-time">Total running time: 35 seconds</span>
               <div id="times-div-Google_Test_Suite">
               </div> <!-- times-div-Google_Test_Suite -->
             </div> <!-- times-div -->
@@ -288,28 +286,28 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">google.GoogleTestsDesktop</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">Setup(krypton.portal@gmail.com, Admin@123456789, krypton.portal2@gmail.com, Admin@123456789)</span>
+                <span class="method-name">Setup(firefox, dinhducthanh91@gmail.com, ngoctrinh, jslucifer.photography@gmai.com, DucThanh1991)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">GoogleLogin_Invalid</span>
-                <span class="method-start">3523 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <img src="failed.png">
                 </img>
+                <span class="method-name">GoogleLogin_Invalid</span>
+                <span class="method-start">13591 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">GoogleLogin_Valid</span>
-                <span class="method-start">17290 ms</span>
+                <span class="method-start">21277 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">GoogleComposeEmail</span>
-                <span class="method-start">40820 ms</span>
+                <span class="method-start">49485 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">Teardown</span>
-                <span class="method-start">40875 ms</span>
+                <span class="method-start">49511 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
